force-app/main/default/objects/Contenido_Planilla__c/Contenido_Planilla__c.object-meta.xml
<CustomObject>
    <label>Contenido Planilla</label>
    <nameField>
        <displayFormat>CPL-{0000000000}</displayFormat>
        <label>Correlativo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contenidos Planilla</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>