force-app/main/default/objects/Contenido_Planilla__c/fields/Aporte_Empleado_Obligatorio__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Empleado_Obligatorio__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aporte Empleado Obligatorio</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>