force-app/main/default/objects/Contenido_Planilla__c/fields/Aporte_Patrono_Voluntario__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patrono_Voluntario__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Aporte Patrono Voluntario</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>