force-app/main/default/objects/Contenido_Planilla__c/fields/Empleado2__c.field-meta.xml
<CustomField>
    <fullName>Empleado2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empleado</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contenidos Planilla</relationshipLabel>
    <relationshipName>Contenidos_Planilla</relationshipName>
    <type>Lookup</type>
</CustomField>