force-app/main/default/objects/Contenido_Planilla__c/fields/Planilla__c.field-meta.xml
<CustomField>
    <fullName>Planilla__c</fullName>
    <label>Planilla</label>
    <referenceTo>Planilla__c</referenceTo>
    <relationshipLabel>Contenidos Planilla</relationshipLabel>
    <relationshipName>Contenidos_Planilla</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>