force-app/main/default/objects/Contenido_Planilla__c/fields/Reserva_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Reserva_Laboral__c</fullName>
    <defaultValue>0.0</defaultValue>
    <label>Reserva Laboral</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>