force-app/main/default/objects/Contenido_Planilla__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Aporte_Empleado_Extraordinario__c</columns>
    <columns>Aporte_Empleado_Obligatorio__c</columns>
    <columns>Aporte_Seguro_de_Vida__c</columns>
    <columns>Aporte_Empleado_Voluntario__c</columns>
    <columns>Aporte_Patrono_Extraordinario__c</columns>
    <columns>Aporte_Patrono_obligatorio__c</columns>
    <columns>Aporte_Patrono_Voluntario__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>